[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "hello_world",
    "variable_and_function",
    "number_arithmetic_operation",
    "trait_rs",
    "from_into",
    "vec",
    "more_destructuring",
    "dereferencing_and_the_dot_operator",
    "generics",
    "more_generics",
    "option",
    "more_option",
    "result",
    "more_result",
    "if_let_and_while_let",
    "hash_map_and_btree_map",
    "more_hash_map",
    "hash_map_entry_method",
    "hash_map_entry_and_hash_set",
    "binary_heap",
    "vecdeque",
    "question_mark_operator",
    "a_simple_trait",
    "another_small_trait",
    "trait_as_bounds",
    "implementing_from",
    "blanket_trait_implementations",
    "the_asref_trait",
    "chaining_methods",
    "iterator_intro",
    "iterators_and_assert_eq",
    "implementing_iterator",
    "intro_to_closures",
    "zero_cost_abstractions",
    "map_and_for_each",
    ""
]

[dependencies]
rand = "0.8.5"
